Backend/analysis_service/infra/k8s/04-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-recruiter-api
  namespace: ai-recruiter
  labels:
    app: ai-recruiter-api
spec:
  type: ClusterIP
  selector:
    app: ai-recruiter-api
  ports:
    - name: http
      port: 8001
      targetPort: http
